Add HANA database to list of known database product names
Add HANA database to the file containing mappings between database product name and database platform class name.

Signed-off-by: Sabine Heider <sabine.heider@sap.com>

--- a/foundation/org.eclipse.persistence.core/resource/org/eclipse/persistence/internal/helper/VendorNameToPlatformMapping.properties
+++ b/foundation/org.eclipse.persistence.core/resource/org/eclipse/persistence/internal/helper/VendorNameToPlatformMapping.properties
@@ -42,4 +42,5 @@ SQL\ Anywhere.*=org.eclipse.persistence.platform.database.SQLAnywherePlatform
 (?i).*symfoware.*=org.eclipse.persistence.platform.database.SymfowarePlatform
 (?i)access.*=org.eclipse.persistence.platform.database.AccessPlatform
 SAP\ DB.*=org.eclipse.persistence.platform.database.MaxDBPlatform
+HDB.*=org.eclipse.persistence.platform.database.HANAPlatform
 
